<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:background="@drawable/button_shape"
        android:paddingStart="@dimen/padding2"
        android:paddingLeft="@dimen/padding2"
        android:paddingTop="@dimen/padding2"
        android:paddingEnd="@dimen/padding2"
        android:paddingRight="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:text="@string/about_alc"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Button2"
        app:layout_constraintEnd_toEndOf="@+id/Button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/Button2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:background="@drawable/button_shape"
        android:paddingStart="@dimen/padding2"
        android:paddingLeft="@dimen/padding2"
        android:paddingTop="@dimen/padding2"
        android:paddingEnd="@dimen/padding2"
        android:paddingRight="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:text="@string/my_profile"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button1"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:paddingTop="48dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textColor="@color/welcomeText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>